Implemented Alan's suggestions

--- a/thesis/01-introduction/00-Introduction.tex
+++ b/thesis/01-introduction/00-Introduction.tex
@@ -1,11 +1,11 @@
 \chapter{Introduction}
 \label{introduction}
 
-\dropcap{Q}uantum computing has emerged as the most promising paradigm for solving problems that are classically intractable. A central example is the integer factorization problem, which consists of decomposing a semiprime number $N$ into its prime constituents. While seemingly simple, no known classical algorithm can factor large integers efficiently, and the best classical methods --- such as the general number field sieve --- scale superpolynomially with input size~\cite{montgomery_cwi_1994}. This computational asymmetry forms the foundation of widely used cryptographic protocols, most notably RSA, whose security relies on the practical difficulty of factoring large semiprimes.
+\dropcap{Q}uantum computing has emerged as the most promising paradigm for solving problems that are classically intractable. A central example is the integer factorization problem, which consists of decomposing a semiprime number $N$ into its prime constituents. While seemingly simple, no known classical algorithm can factor large integers efficiently, and the best classical methods --- such as the general number field sieve --- scale superpolynomially with input size~\cite{montgomery_cwi_1994}. This computational asymmetry forms the foundation of widely used cryptographic protocols, most notably RSA (Rivest-Shamir-Adleman), whose security relies on the practical difficulty of factoring large semiprimes~\cite{rivest_method_1978}.
 
-One of the most celebrated achievements in quantum computing was the discovery of Shor's algorithm, which demonstrated that integer factorization can be solved exponentially faster on a quantum computer than with the best-known classical algorithm, thereby posing a direct threat to RSA-based cryptography. However, the full realization of this algorithm is currently out of reach due to quantum hardware limitations, known as the Noisy Intermediate-Scale Quantum (NISQ) era.
+One of the most celebrated achievements in quantum computing was the discovery of Shor's algorithm~\cite{shor_algorithms_1994}, which demonstrated that integer factorization can be solved exponentially faster on a quantum computer than with the best-known classical algorithm, thereby posing a direct threat to RSA-based cryptography. However, the full realization of this algorithm is currently challenging due to quantum hardware limitations in Noisy Intermediate-Scale Quantum (NISQ) devices.
 
-The constraints imposed by the NISQ era have motivated alternative methods to attempt to solve the same problems by using fewer quantum resources. One such approach is the Adiabatic Quantum Computation (AQC), which takes advantage of the robustness of adiabatic evolution to bring the system from a known state to a final state that encodes the solution of a problem. Another approach is the Variational Quantum Algorithm (VQA), which is a hybrid algorithm that uses quantum hardware for state evolution, and classical routines for optimization purposes.
+The constraints imposed by the NISQ era have motivated alternative methods to attempt to solve the same problems by using fewer quantum resources. One such approach is the Adiabatic Quantum Computation (AQC)~\cite{albash_adiabatic_2018}, which takes advantage of the robustness of adiabatic evolution to bring the system from a known state to a final state that encodes the solution of a problem. Another approach is the Variational Quantum Algorithm (VQA)~\cite{cerezo_variational_2021}, which is a hybrid algorithm that uses quantum hardware for state evolution, and classical routines for optimization purposes.
 
 In this work, we propose and analyze a version of the Digitized Adiabatic Quantum Factorization~\cite{hegade_digitized_2021} algorithm that incorporates a variation in the cost Hamiltonian. By this, we aim to provide a more resource-efficient and scalable method for integer factorization.
 
