--- a/thesis/03-methodology/00-Introduction.tex
+++ b/thesis/03-methodology/00-Introduction.tex
@@ -2,6 +2,7 @@
 % \label{Chapter:Methodology}
 
 \section{Algorithms Implementation: Methods}
+\label{Section:Methods}
 
 In this work, we use the standard (vanilla) formulation of QAOA as a reference framework. To enable a fair comparison between the standard factorization protocol and our alternative variant, we configure the algorithm --- including choices for parameter initialization and classical optimization --- so that the standard protocol performs as effectively as possible. This approach ensures that any observed differences in performance arise from the protocol itself rather than from specific details of the QAOA setup.
 
