--- a/thesis/04-results/01-Introduction.tex
+++ b/thesis/04-results/01-Introduction.tex
@@ -28,7 +28,7 @@ to be factorized. Using fidelity as a baseline metric allows for a clear and con
 comparison between protocols.
 
 All practical aspects of the QAOA setup---including initialization heuristics and the choice of
-classical optimizer---were fixed and justified in Chapter~\ref{Chapter:Methodology} to ensure
+classical optimizer---were fixed and justified in section~\ref{Section:Methods} to ensure
 fair and consistent comparisons. The focus here is exclusively on evaluating and contrasting
 the protocols across problem instances of increasing size under these controlled conditions.
 
