--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -270,3 +270,62 @@
 	pages = {5355--5363},
 	file = {Preprint PDF:/home/fpellicer/Zotero/storage/26CRWRYF/Kadowaki and Nishimori - 1998 - Quantum Annealing in the Transverse Ising Model.pdf:application/pdf;Snapshot:/home/fpellicer/Zotero/storage/BR3IUM2K/9804280.html:text/html},
 }
+
+
+@article{rivest_method_1978,
+	title = {A method for obtaining digital signatures and public-key cryptosystems},
+	volume = {21},
+	issn = {0001-0782, 1557-7317},
+	url = {https://dl.acm.org/doi/10.1145/359340.359342},
+	doi = {10.1145/359340.359342},
+	abstract = {An encryption method is presented with the novel property that publicly revealing an encryption key does not thereby reveal the corresponding decryption key. This has two important consequences: (1) Couriers or other secure means are not needed to transmit keys, since a message can be enciphered using an encryption key publicly revealed by the intented recipient. Only he can decipher the message, since only he knows the corresponding decryption key. (2) A message can be “signed” using a privately held decryption key. Anyone can verify this signature using the corresponding publicly revealed encryption key. Signatures cannot be forged, and a signer cannot later deny the validity of his signature. This has obvious applications in “electronic mail” and “electronic funds transfer” systems. A message is encrypted by representing it as a number M, raising M to a publicly specified power e, and then taking the remainder when the result is divided by the publicly specified product,
+              n
+              , of two large secret primer numbers p and q. Decryption is similar; only a different, secret, power d is used, where e * d ≡ 1(mod (p - 1) * (q - 1)). The security of the system rests in part on the difficulty of factoring the published divisor,
+              n
+              .},
+	language = {en},
+	number = {2},
+	urldate = {2025-09-12},
+	journal = {Communications of the ACM},
+	author = {Rivest, R. L. and Shamir, A. and Adleman, L.},
+	month = feb,
+	year = {1978},
+	pages = {120--126},
+	file = {Full Text:/home/fpellicer/Zotero/storage/G89DKC88/Rivest et al. - 1978 - A method for obtaining digital signatures and public-key cryptosystems.pdf:application/pdf},
+}
+
+
+@inproceedings{shor_algorithms_1994,
+	address = {Santa Fe, NM, USA},
+	title = {Algorithms for quantum computation: discrete logarithms and factoring},
+	isbn = {978-0-8186-6580-6},
+	shorttitle = {Algorithms for quantum computation},
+	url = {http://ieeexplore.ieee.org/document/365700/},
+	doi = {10.1109/SFCS.1994.365700},
+	urldate = {2025-06-20},
+	booktitle = {Proceedings 35th {Annual} {Symposium} on {Foundations} of {Computer} {Science}},
+	publisher = {IEEE Comput. Soc. Press},
+	author = {Shor, P.W.},
+	year = {1994},
+	pages = {124--134},
+	file = {PDF:/home/fpellicer/Zotero/storage/IJQSY8PQ/Shor - 1994 - Algorithms for quantum computation discrete logarithms and factoring.pdf:application/pdf},
+}
+
+
+@article{cerezo_variational_2021,
+	title = {Variational {Quantum} {Algorithms}},
+	volume = {3},
+	issn = {2522-5820},
+	url = {http://arxiv.org/abs/2012.09265},
+	doi = {10.1038/s42254-021-00348-9},
+	abstract = {Applications such as simulating complicated quantum systems or solving large-scale linear algebra problems are very challenging for classical computers due to the extremely high computational cost. Quantum computers promise a solution, although fault-tolerant quantum computers will likely not be available in the near future. Current quantum devices have serious constraints, including limited numbers of qubits and noise processes that limit circuit depth. Variational Quantum Algorithms (VQAs), which use a classical optimizer to train a parametrized quantum circuit, have emerged as a leading strategy to address these constraints. VQAs have now been proposed for essentially all applications that researchers have envisioned for quantum computers, and they appear to the best hope for obtaining quantum advantage. Nevertheless, challenges remain including the trainability, accuracy, and efficiency of VQAs. Here we overview the field of VQAs, discuss strategies to overcome their challenges, and highlight the exciting prospects for using them to obtain quantum advantage.},
+	number = {9},
+	urldate = {2025-03-02},
+	journal = {Nature Reviews Physics},
+	author = {Cerezo, M. and Arrasmith, Andrew and Babbush, Ryan and Benjamin, Simon C. and Endo, Suguru and Fujii, Keisuke and McClean, Jarrod R. and Mitarai, Kosuke and Yuan, Xiao and Cincio, Lukasz and Coles, Patrick J.},
+	month = aug,
+	year = {2021},
+	note = {arXiv:2012.09265 [quant-ph]},
+	pages = {625--644},
+	file = {Cerezo et al. - 2021 - Variational Quantum Algorithms.pdf:/home/fpellicer/Zotero/storage/BCP5CXKP/Cerezo et al. - 2021 - Variational Quantum Algorithms.pdf:application/pdf},
+}
