--- a/thesis/03-methodology/05-SetupSummary.tex
+++ b/thesis/03-methodology/05-SetupSummary.tex
@@ -4,7 +4,7 @@
 
 In summary, the methodological strategy to implement all QAOA circuits adopted through this thesis is as follows:
 \begin{itemize}
-    \item \textbf{Initial state:} $\ket{0}^{\otimes n}$ for the \texttt{standard} protocol, and $\ket{+-+-+\cdots}$ for \texttt{linear} protocol. 
+    \item \textbf{Initial state:} $\ket{+}^{\otimes n}$ for the \texttt{standard} protocol, and $\ket{+-+-+\cdots}$ for \texttt{linear} protocol. 
     \item \textbf{Layer-by-layer training:} QAOA parameters are optimized incrementally, starting from $p=1$ and using previously optimized parameters as initialization for deeper circuits.  
     \item \textbf{Parameter initialization:} New layers are initialized using the heuristic $\gamma_{p+1} \leftarrow \widetilde{\gamma}_p$, $\beta_{p+1} \leftarrow 0$, which outperforms interpolation strategies.  
     \item \textbf{Classical optimizer:} The gradient-based, unbounded BFGS method is employed, providing superior convergence compared to bounded alternatives.  
