--- a/thesis/05-discussion/discussion.tex
+++ b/thesis/05-discussion/discussion.tex
@@ -13,11 +13,11 @@ The choice of cost function proves to be a decisive factor. Between the two line
 
 \subsection*{Sudden fidelity jumps in linear protocols}
 
-One of the most distinctive features of the linear protocols is the occurrence of abrupt fidelity jumps as the number of QAOA layers increases. This contrasts with the smoother fidelity evolution observed for the standard protocol, a behavior consistently seen across the problem sizes studied (see Appendix X). To understand this behavior, we analyzed the spectra of the problem Hamiltonians $\hat{H}_\mathrm{LP}$ and $\hat{H}_\mathrm{QP}$, shown in Fig.~\ref{fig:spectrums}.
+One of the most distinctive features of the linear protocols is the occurrence of abrupt fidelity jumps as the number of QAOA layers increases. This contrasts with the smoother fidelity evolution observed for the standard protocol, a behavior consistently seen across the problem sizes studied (see Fig.~\ref{fig:fidelity_layers_all}). To understand this behavior, we analyzed the spectra of the problem Hamiltonians $\hat{H}_\mathrm{LP}$ and $\hat{H}_\mathrm{QP}$, shown in Fig.~\ref{fig:spectrums}.
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.96\textwidth]{05-discussion/figs/energy_spectrums.pdf}
-    \caption{Energy spectrums for (a) $N=25$, (b) $N=77$, and (c) $N=143$. The horizontal axis shows the decimal encoding of computational basis states, while the vertical axis indicates the normalized eigenenergies. These plots illustrate the broader spectral spread of the linear protocol compared to the quadratic case, which underlies the abrupt fidelity jumps discussed in the text. The eigenstate corresponding to the solution ($\widetilde{E}=0$) is marked as a red star.}
+    \includegraphics[width=0.99\textwidth]{05-discussion/figs/energy_spectrums.pdf}
+    \caption{Energy spectrums for (a) $N=25$, (b) $N=77$, and (c) $N=143$. The horizontal axis shows the decimal encoding of computational basis states, while the vertical axis indicates the normalized eigenenergies. The eigenstate corresponding to the solution ($\widetilde{E}=0$) is marked as a red star.}
     \label{fig:spectrums}
 \end{figure}
 We find that the spectrum of $\hat{H}_\mathrm{LP}$ is more widely spread, leading to larger separations between relevant energy levels. Such a structure tends to promote population transfer in discrete steps, which aligns with the observed fidelity jumps. Conversely, the denser spectrum of $\hat{H}_\mathrm{QP}$ supports a more gradual redistribution of amplitude during the variational evolution.
@@ -27,7 +27,7 @@ This qualitative picture is further supported by the numerical results summarize
     \textrm{RMS} = \sqrt{\dfrac{1}{d} \sum_{i=1}^{d}\widetilde{E}_i^2}\,,
     \label{eq:rms}
 \end{equation}
-where $\widetilde{E}_i^2$ is the normalized energy of the $i$-th eigenstate.
+where $\widetilde{E}_i$ is the normalized energy of the $i$-th eigenstate and $d$ the dimension of the Hilbert space asociated to the problem instance.
 
 The results confirm that $\hat{H}_\mathrm{LP}$ consistently exhibits larger RMS distances than $\hat{H}_\mathrm{QP}$ across the problem sizes studied, in agreement with the visual differences in Fig.~\ref{fig:spectrums}. Together, the table and spectra illustrate that the wider separation of eigenvalues in $\hat{H}_\mathrm{LP}$ explains the step-like fidelity behavior observed in the linear protocol.
 
