--- a/thesis/01-introduction/00-Introduction.tex
+++ b/thesis/01-introduction/00-Introduction.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 \label{introduction}
 
-\dropcap{Q}uantum computing has emerged as the most promising paradigm for solving problems that are classically intractable. A central example is the integer factorization problem, which consists of decomposing a semiprime number $N$ into its prime constituents. While seemingly simple, no known classical algorithm can factor large integers efficiently, and the best classical methods --- such as the general number field sieve --- scale superpolynomially with input size~\cite{montgomery_cwi_1994}. This computational asymmetry forms the foundation of widely used cryptographic protocols, most notably RSA (Rivest-Shamir-Adleman), whose security relies on the practical difficulty of factoring large semiprimes~\cite{rivest_method_1978}.
+\dropcap{Q}uantum computing has emerged as the most promising paradigm for solving problems that are classically intractable. A central example is the integer factorization problem, which consists of decomposing a semiprime number $N$ into its prime constituents. While seemingly simple, no known classical algorithm can factorize large integers efficiently, and the best classical methods --- such as the general number field sieve --- scale superpolynomially with input size~\cite{montgomery_cwi_1994}. This computational asymmetry forms the foundation of widely used cryptographic protocols, most notably RSA (Rivest-Shamir-Adleman), whose security relies on the practical difficulty of factorizing large semiprimes~\cite{rivest_method_1978}.
 
 One of the most celebrated achievements in quantum computing was the discovery of Shor's algorithm~\cite{shor_algorithms_1994}, which demonstrated that integer factorization can be solved exponentially faster on a quantum computer than with the best-known classical algorithm, thereby posing a direct threat to RSA-based cryptography. However, the full realization of this algorithm is currently challenging due to quantum hardware limitations in Noisy Intermediate-Scale Quantum (NISQ) devices.
 
