--- a/thesis/03-methodology/00-Introduction.tex
+++ b/thesis/03-methodology/00-Introduction.tex
@@ -4,8 +4,8 @@
 \section{Algorithms Implementation: Methods}
 \label{Section:Methods}
 
-In this work, we use the standard (vanilla) formulation of QAOA as a reference framework. To enable a fair comparison between the standard factorization protocol and our alternative variant, we configure the algorithm --- including choices for parameter initialization and classical optimization --- so that the standard protocol performs as effectively as possible. This approach ensures that any observed differences in performance arise from the protocol itself rather than from specific details of the QAOA setup.
+In this work, we use the basic formulation of QAOA as a reference framework. To enable a fair comparison between the standard factorization protocol and our alternative variant, we configure the algorithm --- including choices for parameter initialization and classical optimization --- so that the standard protocol performs as effectively as possible. This approach ensures that any observed differences in performance arise from the protocol itself rather than from specific details of the QAOA setup.
 
-For the numerical simulations, several software frameworks are available, including PennyLane and Qiskit. However, in this study we opted for a direct state-vector simulation implemented in \texttt{NumPy}, where circuit layers are applied through explicit matrix multiplications. This strategy avoids the overhead associated with gate-by-gate simulation and provides a more transparent view of the algorithmic dynamics, while remaining computationally efficient at the scale considered here.
+For the numerical simulations, several software frameworks are available, including PennyLane and Qiskit. However, in this study we opted for a direct state-vector simulation implemented in NumPy, where circuit layers are applied through explicit matrix multiplications. This strategy avoids the overhead associated with gate-by-gate simulation and provides a more transparent view of the algorithmic dynamics, while remaining computationally efficient at the scale considered here.
 
 To facilitate reproducibility, the complete implementation together with the numerical procedures and data analysis scripts has been made publicly available in a GitHub repository\footnote{\url{https://github.com/fpllcr/master-thesis}}.
