--- a/thesis/03-methodology/04-ClassicalOptimizer.tex
+++ b/thesis/03-methodology/04-ClassicalOptimizer.tex
@@ -23,5 +23,5 @@ Gradient-free methods such as Nelder-Mead showed promising performance for small
     \label{fig:optimizer_parameter_comparison}
 \end{figure}
 
-Based on these findings, \textbf{BFGS is selected as the classical optimizer for all experiments}.  
+Based on these findings, BFGS is selected as the classical optimizer for all experiments.  
 This choice complements the other elements of our QAOA setup, ensuring a consistent and high-performance framework for comparing the standard protocol and the proposed linearized protocol.
