--- a/thesis/06-appendix/01-InformationTable.tex
+++ b/thesis/06-appendix/01-InformationTable.tex
@@ -20,7 +20,7 @@
         143 & 8          & 11 (5)     & 13 (6)     & 3     & 5     & 101                    & 00110                  & 10101100, 01110100    \\
         \bottomrule
     \end{tabular}
-    \captionof{table}{Overview of all biprime test instances studied in this work.}
+    \captionof{table}{Overview of all semiprime test instances studied in this work.}
     \label{tab:instances_overview_all}
 \end{center}
 
