--- a/thesis/03-methodology/02-IncrementalApproach.tex
+++ b/thesis/03-methodology/02-IncrementalApproach.tex
@@ -7,7 +7,7 @@ This observation motivates a progressive training strategy, often referred to as
 \begin{enumerate}
     \item Analyze the cost function landscape for $p=1$ to select initial parameters $\gamma_1$ and $\beta_1$ close to the optimal region (Fig.~\ref{fig:costfun_landscape}).
     \item Optimize QAOA with $p=1$ to obtain the parameters $\widetilde{\gamma}_1$ and $\widetilde{\beta}_1$.
-    \item Optimize QAOA with $p=2$, initializing $\gamma_1=\widetilde{\gamma}_1$ and $\beta_1=\widetilde{\beta}_1$, and selecting suitable initial values for $\gamma_2$ and $\beta_2$ using an appropriate heuristic This yields the updated parameters $\widetilde{\gamma}_1, \widetilde{\gamma}_2, \widetilde{\beta}_1, \widetilde{\beta}_2$.
+    \item Optimize QAOA with $p=2$, initializing $\gamma_1=\widetilde{\gamma}_1$ and $\beta_1=\widetilde{\beta}_1$, and selecting suitable initial values for $\gamma_2$ and $\beta_2$ using an appropriate heuristic. This yields the updated parameters $\widetilde{\gamma}_1, \widetilde{\gamma}_2, \widetilde{\beta}_1, \widetilde{\beta}_2$.
     \item Repeat this procedure iteratively up to the desired depth $p$, each time initializing
     with the optimized parameters from the previous iteration and applying a strategy to set
     the new layer's parameters.
