--- a/thesis/04-results/01-Introduction.tex
+++ b/thesis/04-results/01-Introduction.tex
@@ -27,12 +27,12 @@ corresponds to the probability of successfully obtaining the correct factors of 
 to be factorized. Using fidelity as a baseline metric allows for a clear and consistent
 comparison between protocols.
 
-All practical aspects of the QAOA setup---including initialization heuristics and the choice of
-classical optimizer---were fixed and justified in section~\ref{Section:Methods} to ensure
+All practical aspects of the QAOA setup --- including initialization heuristics and the choice of
+classical optimizer --- were fixed and justified in section~\ref{Section:Methods} to ensure
 fair and consistent comparisons. The focus here is exclusively on evaluating and contrasting
 the protocols across problem instances of increasing size under these controlled conditions.
 
-As representative examples, we present detailed results for the biprime integers $N = 25$, $N = 77$,
+As representative examples, we present detailed results for the semiprime integers $N = 25$, $N = 77$,
 and $N = 143$. A complete set of results can be found in the accompanying GitHub repository
 and is summarized in the appendix~\ref{Chapter:Appendix}. Table~\ref{tab:instances_overview} provides an overview of
 these selected test cases, including relevant problem parameters and solution encodings.
@@ -47,7 +47,7 @@ these selected test cases, including relevant problem parameters and solution en
         143 & 8          & 11 (5)     & 13 (6)     & 3     & 5     & 101                    & 00110                  & 10101100, 01110100    \\
         \bottomrule
     \end{tabular}
-    \caption{Overview of biprime test instances used as representative examples.}
+    \caption{Overview of semiprime test instances used as representative examples.}
     \label{tab:instances_overview}
 \end{table}
 
